--- a/anchor/Anchor.toml
+++ b/anchor/Anchor.toml
@@ -1,18 +1,28 @@
+[toolchain]
+
 [features]
 seeds = false
 skip-lint = false
+
 [programs.localnet]
-hello_world = "EuJfgknXicf6iZASeagt5U6XDDPpLTQrvWPW31vgAwo8"
+hello_world = "Dk4gQiPc1wqZExpb2BdPr16MEuqRSwPfWiwqtrCGMM3Y"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
 cluster = "Localnet"
-wallet = "~/.config/solana/id.json"
+wallet = 'C:\Users\garii/.config/solana/id.json'
 
 [scripts]
 test = "../node_modules/.bin/nx run anchor:jest"
 
+[test]
+startup_wait = 5000
+shutdown_wait = 2000
+upgradeable = false
+
 [test.validator]
 bind_address = "127.0.0.1"
+ledger = ".anchor/test-ledger"
+rpc_port = 8899
